--- a/sass/customer/_customer-rincian-pesanan.scss
+++ b/sass/customer/_customer-rincian-pesanan.scss
@@ -53,7 +53,12 @@
             grid-area: 1 / 2 / 2 / 3;
             display: flex;
             align-items: flex-start;
-            align-items: flex-end;
+            justify-content: flex-end;
+
+            @media only screen and (max-width: $bp-medium) {
+                align-items: center;
+                justify-content: flex-end;
+            }
         }
 
     }
@@ -354,6 +359,12 @@
                 grid-template-columns: 0.5fr 1fr;
                 grid-template-rows: repeat(5, auto);
             }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-row-gap: 12px;
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(8, auto);
+            }
         }
 
         &--child-1 {
@@ -363,11 +374,15 @@
 
             @media only screen and (max-width: $bp-large) {
                 grid-area: 1 / 1 / 2 / 2; 
-            }
-
+            }       
+        
             @media only screen and (max-width: $bp-smallest) {
                 grid-area: 1 / 1 / 2 / 3; 
-           }
+            }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 1 / 1 / 2 / 2; 
+            }
         }
 
         &--child-2 {
@@ -383,7 +398,12 @@
             }
 
             @media only screen and (max-width: $bp-smallest) {
-                grid-area: 2 / 1 / 3 / 3;
+                grid-area: 1 / 2 / 2 / 3;
+                margin-bottom: 0; 
+            }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 2 / 1 / 3 / 3; 
                 margin-bottom: 0; 
             }
         }
@@ -398,6 +418,10 @@
 
             @media only screen and (max-width: $bp-smallest) {
                 grid-area: 3 / 1 / 4 / 2;
+            }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 3 / 1 / 4 / 2; 
             }
         }
 
@@ -414,6 +438,11 @@
                 grid-area: 3 / 2 / 4 / 3;
                 margin-bottom: 0;
             }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 4 / 1 / 5 / 2; 
+                margin-bottom: 10px;
+            }
         }
 
         &--child-5 { 
@@ -427,6 +456,11 @@
             @media only screen and (max-width: $bp-smallest) {
                 grid-area: 4 / 1 / 5 / 2; 
             }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 5 / 1 / 6 / 2; 
+            }
+
         }
 
         &--child-6 { 
@@ -438,9 +472,14 @@
                 margin-bottom: 10px;
             }
 
-              @media only screen and (max-width: $bp-smallest) {
+            @media only screen and (max-width: $bp-smallest) {
                 grid-area: 4 / 2 / 5 / 3; 
                 margin-bottom: 0;
+            }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 6 / 1 / 7 / 2; 
+                margin-bottom: 10px;
             }
         }
 
@@ -455,6 +494,11 @@
             @media only screen and (max-width: $bp-smallest) {
                 grid-area: 5 / 1 / 6 / 2; 
             }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 7 / 1 / 8 / 2; 
+            }
+
         }
 
         &--child-8 { 
@@ -469,6 +513,10 @@
               @media only screen and (max-width: $bp-smallest) {
                 grid-area: 5 / 2 / 6 / 3; 
                 margin-bottom: 0;
+            }
+
+            @media only screen and (max-width: $bp-mobile) {
+                grid-area: 8 / 1 / 9 / 2; 
             }
         }
 
