--- a/sass/pengelola/_pengelola-pesanan-rincian.scss
+++ b/sass/pengelola/_pengelola-pesanan-rincian.scss
@@ -32,7 +32,7 @@
             grid-row-gap: 0px;
 
             @media only screen and (max-width: $bp-smallest) {
-                grid-template-columns: 0.5fr 1fr;
+                grid-template-columns: 0.8fr 1fr;
                 grid-column-gap: 8px;
             }
             
@@ -189,7 +189,7 @@
 
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 0.25fr);
+        grid-template-rows: 0.25fr auto repeat(2, 0.25fr);
         grid-column-gap: 36px;
         grid-row-gap: 1.2rem;
 
@@ -211,12 +211,19 @@
         }
         
         &--child-2 { 
+            grid-area: 3 / 1 / 4 / 2; 
+            margin-top: 24px;
+            @extend .pengelola-pesanan-rincian--action--template;
+        }
+
+        &--child-2--btn { 
             grid-area: 2 / 1 / 3 / 2; 
+            margin-top: 24px;
             @extend .pengelola-pesanan-rincian--action--template;
         }
         
         &--child-3 { 
-            grid-area: 3 / 1 / 4 / 2; 
+            grid-area: 4 / 1 / 5 / 2; 
             margin-top: 24px;
 
             display: grid;
@@ -268,5 +275,72 @@
         @media only screen and (max-width: $bp-smallest) {
             max-width: 90vw !important;
         }  
+    }
+
+    &__dialog-hubungi{
+        width: 30% !important;
+
+        @media only screen and (max-width: $bp-largest) {
+            width: 40% !important;
+        }
+
+        @media only screen and (max-width: $bp-medium) {
+            width: 50% !important;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            width: 70% !important;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            width: 90% !important;
+        }
+
+        &--parent{
+            display: grid;
+            grid-template-columns: repeat(2, auto);
+            grid-template-rows: repeat(3, 1fr);
+            grid-column-gap: 0px;
+            grid-row-gap: 0px;
+        }
+
+        &--child-1 { 
+            grid-area: 1 / 1 / 2 / 3; 
+
+            line-height: 1.8;
+            margin-bottom: 12px;
+        }
+
+        &--child-2 { 
+            grid-area: 2 / 1 / 3 / 3; 
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            margin-bottom: 16px;
+        }
+
+        &--child-3 { 
+            grid-area: 3 / 1 / 4 / 3; 
+            margin-top: 16px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &__btn{
+                width: 75% !important;
+
+                @media only screen and (max-width: $bp-smallest) {
+                    width: 85% !important;
+                }
+
+                @media only screen and (max-width: $bp-mobile) {
+                    width: 90% !important;
+                }
+            }
+        }
+        
     }
 }
