--- a/sass/pengelola/_pengelola-pesanan.scss
+++ b/sass/pengelola/_pengelola-pesanan.scss
@@ -154,7 +154,7 @@
             grid-row-gap: 0px;
 
             @media only screen and (max-width: $bp-smallest) {
-                grid-template-columns: 0.5fr 1fr;
+                grid-template-columns: 0.8fr 1fr;
                 grid-column-gap: 8px;
             }
             
@@ -341,6 +341,27 @@
                 display: grid;
                 align-items: flex-end;
                 justify-content: flex-end;
+
+                grid-template-columns: repeat(2, 0.25fr);
+                grid-template-rows: 1fr;
+                grid-column-gap: 12px;
+                grid-row-gap: 0px;
+
+
+                &--1 { 
+                    grid-area: 1 / 1 / 2 / 2; 
+                    display: grid;
+                    align-items: flex-start;
+                    justify-content: center;
+                }
+
+                &--2 { 
+                    grid-area: 1 / 2 / 2 / 3; 
+                    display: grid;
+                    align-items: flex-end;
+                    justify-content: center;
+                }
+
 
                 &__btn{
                     width: 100%;
