--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,11 @@
     font-size: 14px !important;
   }
 }
+@media only screen and (max-width: 25em) {
+  .v-btn__content {
+    font-size: 10px !important;
+  }
+}
 
 .v-list-item__title {
   font-size: 1.6rem !important;
@@ -2845,20 +2850,69 @@ li {
   grid-column-gap: 12px;
   grid-row-gap: 0px;
 }
+@media only screen and (max-width: 68.75em) {
+  .pengelola-pesanan--detail__child-4__desc-2 {
+    grid-template-columns: repeat(2, 0.5fr);
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .pengelola-pesanan--detail__child-4__desc-2 {
+    grid-template-columns: repeat(2, 0.75fr);
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-pesanan--detail__child-4__desc-2 {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 25em) {
+  .pengelola-pesanan--detail__child-4__desc-2 {
+    grid-template-columns: 0.75fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
 .pengelola-pesanan--detail__child-4__desc-2--1 {
   grid-area: 1/1/2/2;
   display: grid;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-end;
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-pesanan--detail__child-4__desc-2--1 {
+    grid-area: 2/1/3/2;
+    margin-top: 12px;
+  }
 }
 .pengelola-pesanan--detail__child-4__desc-2--2 {
   grid-area: 1/2/2/3;
   display: grid;
   align-items: flex-end;
-  justify-content: center;
+  justify-content: flex-end;
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-pesanan--detail__child-4__desc-2--2 {
+    grid-area: 1/1/2/2;
+  }
+}
+.pengelola-pesanan--detail__child-4__desc-2--2--fix {
+  grid-area: 1/2/2/3;
+  display: grid;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-pesanan--detail__child-4__desc-2--2--fix {
+    grid-area: 2/1/3/2;
+  }
 }
 .pengelola-pesanan--detail__child-4__desc-2__btn {
-  width: 100%;
+  width: 100% !important;
+}
+@media only screen and (max-width: 37.5em) {
+  .pengelola-pesanan--detail__child-4__desc-2__btn {
+    font-size: 8px !important;
+  }
 }
 
 .filter-dialog {
