--- a/sass/pengelola/_pengelola-pesanan.scss
+++ b/sass/pengelola/_pengelola-pesanan.scss
@@ -347,24 +347,69 @@
                 grid-column-gap: 12px;
                 grid-row-gap: 0px;
 
+                
+                @media only screen and (max-width: $bp-large) {
+                    grid-template-columns: repeat(2, 0.5fr);
+                }
+
+                @media only screen and (max-width: $bp-medium) {
+                    grid-template-columns: repeat(2, 0.75fr);
+                }
+
+                @media only screen and (max-width: $bp-small) {
+                    grid-template-columns: 1fr;
+                    grid-template-rows: 1fr 1fr;
+                }
+
+                @media only screen and (max-width: $bp-mobile) {
+                    grid-template-columns: 0.75fr;
+                    grid-template-rows: 1fr 1fr;
+                }
+
 
                 &--1 { 
                     grid-area: 1 / 1 / 2 / 2; 
                     display: grid;
                     align-items: flex-start;
-                    justify-content: center;
+                    justify-content: flex-end;
+
+                    
+                    @media only screen and (max-width: $bp-small) {
+                        grid-area: 2 / 1 / 3 / 2; 
+                        margin-top: 12px;
+                    }
                 }
 
                 &--2 { 
                     grid-area: 1 / 2 / 2 / 3; 
                     display: grid;
                     align-items: flex-end;
-                    justify-content: center;
+                    justify-content: flex-end;
+
+                    
+                    @media only screen and (max-width: $bp-small) {
+                        grid-area: 1 / 1 / 2 / 2; 
+                    }
+                }
+
+                &--2--fix { 
+                    grid-area: 1 / 2 / 2 / 3; 
+                    display: grid;
+                    align-items: flex-end;
+                    justify-content: flex-end;
+
+                    @media only screen and (max-width: $bp-small) {
+                        grid-area: 2 / 1 / 3 / 2; 
+                    }
                 }
 
 
                 &__btn{
-                    width: 100%;
+                    width: 100% !important;
+
+                    @media only screen and (max-width: $bp-small) {
+                        font-size: 8px !important;
+                    }
                 }
             }
         }
