--- a/sass/pengelola/_pengelola-pesanan.scss
+++ b/sass/pengelola/_pengelola-pesanan.scss
@@ -202,7 +202,7 @@
             grid-area: 3 / 1 / 4 / 2;
 
             display: grid;
-            grid-template-columns: 0.5fr 1fr;
+            grid-template-columns: 0.25fr 1fr;
             grid-template-rows: repeat(5, auto);
             grid-column-gap: 0px;
             grid-row-gap: 0px;
@@ -323,7 +323,7 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: 1fr;
-            grid-column-gap: 0px;
+            grid-column-gap: 36px;
             grid-row-gap: 0px;
 
             &__desc-1{
@@ -378,6 +378,10 @@
                         grid-area: 2 / 1 / 3 / 2; 
                         margin-top: 12px;
                     }
+
+                    @media only screen and (max-width: $bp-mobile) {
+                        display: block !important;
+                    }
                 }
 
                 &--2 { 
@@ -390,6 +394,10 @@
                     @media only screen and (max-width: $bp-small) {
                         grid-area: 1 / 1 / 2 / 2; 
                     }
+
+                    @media only screen and (max-width: $bp-mobile) {
+                        display: block !important;
+                    }
                 }
 
                 &--2--fix { 
@@ -400,6 +408,10 @@
 
                     @media only screen and (max-width: $bp-small) {
                         grid-area: 2 / 1 / 3 / 2; 
+                    }
+
+                    @media only screen and (max-width: $bp-mobile) {
+                        display: block !important;
                     }
                 }
 
