--- a/sass/pengelola/_pengelola-transaksi-masuk.scss
+++ b/sass/pengelola/_pengelola-transaksi-masuk.scss
@@ -147,23 +147,20 @@
 
     &__list-header{
         display: grid;
-        grid-template-columns: 1fr 0.1fr 0.1fr;
+        grid-template-columns: 1fr 0.5fr;
         grid-template-rows: 1fr;
         grid-column-gap: 12px;
         grid-row-gap: 0px;
 
         @media only screen and (max-width: $bp-medium) {
-            grid-template-columns: repeat(2, auto);
+            grid-template-columns: repeat(2, 0.45fr);
             grid-template-rows: 1fr 1fr;
         }
 
         @media only screen and (max-width: $bp-mobile) {
             grid-template-columns: auto;
-            grid-template-rows: 1fr 1fr 1fr;
+            grid-template-rows: auto 1fr;
         }
-
-        align-items: center;
-        justify-content: flex-start;
 
         &--child-1 { 
             grid-area: 1 / 1 / 2 / 2; 
@@ -183,8 +180,14 @@
         &--child-2 { 
             grid-area: 1 / 2 / 2 / 3; 
 
-            display: flex;
-            justify-content: flex-end;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+            grid-column-gap: 12px;
+            grid-row-gap: 0px;
+            
+
+            align-items: center;
 
             @media only screen and (max-width: $bp-medium) {
                 grid-area: 2 / 1 / 3 / 2; 
@@ -192,23 +195,35 @@
                 display: flex;
                 justify-content: flex-start;
             }
-        }
-
-        &--child-3 { 
-            grid-area: 1 / 3 / 2 / 4; 
-
-            display: flex;
-            justify-content: flex-start;
-
-            @media only screen and (max-width: $bp-medium) {
-                grid-area: 2 / 2 / 3 / 3; 
-            }
 
             @media only screen and (max-width: $bp-mobile) {
-                grid-area: 3 / 1 / 4 / 2; 
-                display: flex;
-                justify-content: flex-start;
+                display: grid;
+                grid-template-columns: 0.75fr;
+                grid-template-rows: 1fr 1fr;
+                grid-row-gap: 12px;
             }
+
+            &__1 { 
+                grid-area: 1 / 1 / 2 / 2; 
+
+                @media only screen and (max-width: $bp-mobile) {
+                    grid-area: 1 / 1 / 2 / 2; 
+                }
+            }
+
+            &__2 { 
+                grid-area: 1 / 2 / 2 / 3; 
+
+                @media only screen and (max-width: $bp-mobile) {
+                    grid-area: 2 / 1 / 3 / 2; 
+                }
+            }
+
+
+        }
+
+        &__btn{
+            width: 100% !important;
         }
 
     }
