--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -384,6 +384,7 @@
 }
 
 #drawer-header{
+    color: #fff !important;
     background: url('../src/assets/Frame1.png');
     background-repeat: no-repeat;
     background-size: 12vw;
