--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,5 @@
 $bp-biggest: 120em;     // 1920px
+$bp-bigger: 100em;    // 1500px
 $bp-largest: 80em;     // 1200px
 $bp-large: 68.75em;    // 1100px
 $bp-medium: 56.25em;   // 900px
