--- a/sass/_login-register.scss
+++ b/sass/_login-register.scss
@@ -7,7 +7,11 @@
 
     margin-bottom: 2.4rem;
     
-    @media only screen and (max-width: $bp-largest) {
+    @media only screen and (max-width: $bp-bigger) {
+        grid-template-columns: 0.5fr 0.75fr 0.5fr;
+    }
+
+    @media only screen and (max-width: $bp-large) {
         grid-template-columns: 0.5fr 1fr 0.5fr;
     }
 
@@ -26,7 +30,7 @@
     &-card{
         grid-area: 1 / 3 / 3 / 4;
 
-        @media only screen and (max-width: $bp-largest) {
+        @media only screen and (max-width: $bp-bigger) {
             grid-area: 1 / 2 / 3 / 3;
         }
 
@@ -101,6 +105,10 @@
     grid-template-rows: 1fr;
     grid-column-gap: 0;
     grid-row-gap: 0;
+
+    @media only screen and (max-width: $bp-bigger) {
+        grid-template-columns: 0.75fr 1fr 0.75fr;
+    }
 
     @media only screen and (max-width: $bp-largest) {
         grid-template-columns: 0.5fr 1fr 0.5fr;
