--- a/sass/pengelola/_pengelola-transaksi-unduh.scss
+++ b/sass/pengelola/_pengelola-transaksi-unduh.scss
@@ -2,7 +2,7 @@
     &__grid{
         display: grid;
         grid-template-columns: 1fr 0.5fr;
-        grid-template-rows: auto repeat(3, 1fr);
+        grid-template-rows: auto repeat(4, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
 
@@ -36,6 +36,10 @@
         grid-area: 4 / 1 / 5 / 2; 
     }
 
+    &__child-5 { 
+        grid-area: 5 / 1 / 6 / 2; 
+    }
+
     &__tanggal{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -49,11 +53,13 @@
         }
 
         &--child-1 { 
-            grid-area: 1 / 1 / 2 / 2; 
+            grid-area: 1 / 1 / 2 / 3; 
 
             display: flex;
             align-items: center;
             justify-content: flex-start;
+
+            text-align: left;
 
             @media only screen and (max-width: $bp-smallest) {
                 margin-bottom: 12px;
